# job-scout

./: .gitignore  README.md  config.minimal.yaml  config.template.yaml  pyproject.toml  requirements.txt  setup.sh
src/job_scout/: __init__.py  __main__.py  bot.py  cli.py  config.py  db.py  export.py  llm.py  models.py  notify.py  scheduler.py  scorer.py  util.py
src/job_scout/scrapers/: __init__.py  bayt.py  constants.py  glassdoor.py  google.py  indeed.py  linkedin.py  tls.py  ziprecruiter.py
tests/: test_base_scraper.py  test_bot.py  test_cli_digest.py  test_cli_filter.py  test_cli_multiconfig.py  test_cli_report.py  test_cli_rescore.py  test_cli_scrape.py  test_cli_stats.py  test_concurrent.py  test_config.py  test_content_dedup.py  test_db.py  test_export.py  test_llm.py  test_models.py  test_notify.py  test_scheduler.py  test_scorer.py  test_scrapers.py  test_tls.py  test_util.py  test_validate_quality.py
